2016-05-16  Eric Herman <eric@freesa.org>

	* tagging as release version 1.0.0

	* Makefile: replaceing with Makefile.am and configure.ac
	* ChangeLog: Freshly created ChangeLog.