@@ -1,14 +1,14 @@
 lib_LTLIBRARIES=libecheck.la
-libecheck_la_SOURCES=echeck.c
+libecheck_la_SOURCES=src/echeck.c src/echeck.h
 
-include_HEADERS=echeck.h
+include_HEADERS=src/echeck.h
 
 TESTS=$(check_PROGRAMS)
 check_PROGRAMS=test-echeck
-test_echeck_SOURCES=test-echeck.c
+test_echeck_SOURCES=tests/test-echeck.c src/echeck.h
 test_echeck_LDADD=libecheck.la
 
-ACLOCAL_AMFLAGS=-I m4
+ACLOCAL_AMFLAGS=-I m4 --install
 
 AM_CFLAGS=-std=c89 -O0 -ggdb -Wall -Wextra -Wpedantic -Werror
 
@@ -19,4 +19,12 @@ tidy:
 	$(LINDENT) \
 		-T FILE \
 		-T size_t \
-		*.h *.c
+		`find src tests -name '*.h' -o -name '*.c'`
+
+valgrind: test-echeck
+	libtool --mode=execute valgrind ./test-echeck
+
+spotless:
+	rm -rf `cat .gitignore`
+	( cd src; rm -rf `cat ../.gitignore`; cd .. )
+	( cd tests; rm -rf `cat ../.gitignore`; cd .. )
