@@ -1,6 +1,5 @@
-TODO:
-* consider moving src into src/ directory
+libecheck TODO:
+
 * rework test-echeck
-  * move into subdirectory
   * make err file unique
   * break into separate tests
