@@ -2,9 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([libecheck], [1.0.0], [eric@freesa.org])
-AC_CONFIG_SRCDIR([echeck.h])
+AC_INIT([libecheck], [1.0.1-dev], [eric@freesa.org])
+AC_CONFIG_SRCDIR([src/echeck.h])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
@@ -22,7 +23,7 @@ AC_TYPE_SIZE_T
 # Checks for library functions.
 AC_CHECK_FUNCS([strstr])
 
-AM_INIT_AUTOMAKE([-Werror -Wall])
+AM_INIT_AUTOMAKE([subdir-objects -Werror -Wall])
 AM_PROG_AR
 LT_INIT
 
