@@ -1,0 +1,3 @@
+libecheck NEWS
+
+* Initial Release version 1.0.0	(2016-05-16) [stable]
